# HONDA-Bot

./: .gitignore  a.py  constant.py  launch.py  main.py  multi_func.py  pyproject.toml  quiz.json  remove_user.json  requirements.txt  zyanken.py  zyanken_record.json
src/: quiz.py  reject_user.txt  role_reset.py  shutdown.py  stream.py  sub.py  talk.py  welcome.py
src/among/: among_command.py
src/uno/: make_image.py  uno_command.py  uno_func.py  uno_record.json  uno_record.py
src/zyanken/: no_reply_user.txt  zyanken_command.py  zyanken_func.py  zyanken_record.json
uno/: make_image.py  uno.py  uno_func.py  uno_record.json  uno_record.py  uno_record.xlsx
zyanken/: no_reply_user.txt  reset_user.txt  zyanken.py  zyanken_record.json  zyanken_restore.py
zyanken/former_data/Season 1/: Result_S1.txt  no_data_user.json  zyanken.py  zyanken_record.json  zyanken_restore.py
zyanken/former_data/Season 2/: Result_S2.txt  zyanken.py  zyanken_restore.py
