[tool.poetry]
name = "repl_python3_HONDA-Bot"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.14.0"
flask = "^1.1.2"
pytz = "^2020.1"
"discord.py" = "^1.5.0"
jaconv = "^0.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
